--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,95 @@
     <style>
       .link-success-hover:hover {
         color: #198754 !important; /* Bootstrap green */
+
+      /* Hero Section */
       }
+    .hero{
+      background: url('images/baner1.jpg') no-repeat center center/cover;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: white;
+      text-align: center;
+      position: relative;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 128, 0, 0.363); /* dark overlay */
+    }
+    .hero h1, .hero p {
+      position: relative;
+      z-index: 1;
+    }
+   
+    
+    /* Overlay Effect */
+    .project-card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+    }
+    .project-card img {
+      transition: transform 0.4s ease;
+    
+    }
+    .project-card:hover img {
+      transform: scale(1.1);
+    }
+    .project-card .overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+      opacity: 0;
+      transition: all 0.4s ease;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .project-card:hover .overlay {
+      opacity: 1;
+    }
+
+  .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+  }
+  .nav-tabs {
+  background: #f5f5f5;   
+  border-radius: 6px;    
+  display: inline-flex;  
+}
+.nav-tabs .nav-link {
+  color: #333;
+  border: none;
+
+}
+.nav-tabs .nav-link.active {
+  border-bottom: 2px solid #28a745; 
+  font-weight: 300;
+  background: transparent;
+  color: #000;
+
+}
+
+.projects-section{
+  margin-top:20px;
+  padding-top: 10px;
+}
+
+.projects-section.row{
+  margin-top: 10px;
+}
     </style>
   </head>
   <body>
-
     <!-- Top Bar -->
     <div style="background-color:#0b3d2e;" class="text-white py-3">
       <div class="container d-flex justify-content-between align-items-center">
@@ -107,8 +191,102 @@
     </header>
     <!-- Header End -->
 
-    <h1>Projects Page</h1>
+    <!-- Hero Section -->
 
+  <section class="hero">
+    <h1 style="font-weight: bold;">Projects</h1>
+    <p style="font-weight: normal;">Home /pages/ Projects</p>
+  </section>
+
+  <!-- Services Heading -->
+   <section class="py-5 text-center">
+    <h5 style="color:#008000bd">Our Projects </h5> 
+    <h1 style="color: #0b3d2e;"><b> Some Of Our<br>Wonderful Projects</b> </h1>
+  </section>
+
+  <!-- All Projects -->
+
+  <div class="d-flex justify-content-center mb-4">
+  <ul class="nav nav-tabs justify-content-center border-0 mb-4">
+  <li class="nav-item">
+      <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab">
+      All
+    </button>
+  </li>
+  <li class="nav-item">
+    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#complete" type="button" role="tab">
+      Complete Projects
+    </button>
+  </li>
+  <li class="nav-item">
+    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#ongoing" type="button" role="tab">
+      Ongoing Projects
+    </button>
+  </li>
+</ul>
+</div>
+  
+   <!-- Tab Content Start -->
+<div class="container my-5">
+  <div class="tab-content">
+
+    <!-- All Projects -->
+    <div class="tab-pane fade show active" id="all" role="tabpanel">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <img src="images/service-1.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-2.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-3.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-4.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-5.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-6.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+      </div>
+    </div>
+
+    <!-- Complete Projects -->
+    <div class="tab-pane fade" id="complete" role="tabpanel">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <img src="images/service-1.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-3.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-5.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+      </div>
+    </div>
+
+    <!-- Ongoing Projects -->
+    <div class="tab-pane fade" id="ongoing" role="tabpanel">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <img src="images/service-2.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-4.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+        <div class="col-md-4">
+          <img src="images/service-6.jpg" class="img-fluid rounded-3 shadow-sm">
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!-- Tab Content End -->
     <!-- Footer Start -->
     <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
       <div class="container mt-5 mb-5">
@@ -160,7 +338,6 @@
                   Gardening</a></li>
             </ul>
           </div>
-
           <!-- Quick Links -->
           <div class="col-md-4 mb-4">
             <h5 class="fw-bold mb-4">Quick Links</h5>
@@ -183,10 +360,8 @@
                   class="text-white text-decoration-none">Contact US</a></li>
             </ul>
           </div>
-
         </div>
       </div>
-
       <!-- Bottom -->
       <div class="py-3" style="background-color:#092b21;">
         <div
@@ -202,6 +377,8 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous">
+    </script>
+
   </body>
 </html>
