--- a/reviews.html
+++ b/reviews.html
@@ -22,25 +22,6 @@
       color: #198754 !important;
       /* Bootstrap green */
     }
-
-    .texta1 {
-      font-size: 40px;
-      color: #198754;
-
-    }
-
-    .texta2 {
-      font-size: 23px;
-      color: black;
-      text-shadow: #5d9182;
-
-    }
-
-    .texta5{
-      color: black;
-      font-size: 20px;
-    }
-
      /* Page Header */
       .page-header {
         position: relative;
@@ -155,8 +136,8 @@
       </nav>
     </header>
     <!-- Header End -->
-      <!-- top Header -->
-     <section class="page-header d-flex align-items-center mb-5">
+    <!-- top Header -->
+    <section class="page-header d-flex align-items-center mb-5">
       <div class="overlay"></div>
       <div class="container text-center py-5 position-relative">
         <h1 class="display-3 text-white mb-4 fw-bold">Reviews</h1>
@@ -176,73 +157,92 @@
     <!-- Header End -->
 
     <main>
-      <section>
-        <div class="container mt-2">
-          <div class="row">
-            <div class="col-md-5">
-              <h5 class="text-success mt-5">Testimonial</h5>
+      <div class="container py-5">
+        <div class="row align-items-center">
 
-              <p class="texta1"> <strong>What Our Clients Say <br> About Us!</strong></p>
+          <!-- Left Content -->
+          <div class="col-md-6 mb-4 mb-md-0">
+            <h5 class="text-success fw-bold">Testimonial</h5>
+            <h1 class="fw-bold display-5" style="color: #0b3d2e;">
+              What Our Clients Say <br> About Us!
+            </h1>
+            <p class="text-secondary mt-5">
+              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
+              Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit sed
+              stet
+              lorem sit clita duo justo.
+            </p>
+            <a href="#" class="btn btn-success btn-lg rounded-3 fw-semibold mt-4">See
+              More</a>
+          </div>
 
-              <button type="button" class="btn btn-outline-success">See
-                More</button>
-            </div>
-            <div class="col-md-7">
-              <div id="carouselExampleInterval" class="carousel slide"
-                data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="1000">
-                    <img src="images/blank.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <img src="images/girl2.jpg" alt>
-                      <p class="texta5">Dolores sed duo clita tempor justo dolor
-                        et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam
-                        tempor erat.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="1000">
-                    <img src="images/blank.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <img src="images/testimonial-1.jpg" alt>
-                      <p class="texta5">Dolores sed duo clita tempor justo dolor
-                        et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam
-                        tempor erat.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/blank.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <img src="images/man1.png" alt>
-                      <p class="texta5">Dolores sed duo clita tempor justo dolor
-                        et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam
-                        tempor erat.</p>
+          <!-- Right Carousel -->
+          <div class="col-md-6">
+            <div id="testimonialCarousel" class="carousel slide"
+              data-bs-ride="carousel">
+
+              <div class="carousel-inner">
+
+                <!-- Slide 1 -->
+                <div class="carousel-item active">
+                  <div
+                    class="d-flex flex-column align-items-center text-center">
+                    <img src="https://randomuser.me/api/portraits/men/32.jpg"
+                      class="rounded mb-3"
+                      style="width:80px; height:80px; object-fit:cover;"
+                      alt="Client">
+                    <div>
+                      <p class="text-secondary">
+                        Dolores sed duo clita tempor justo dolor et stet lorem
+                        kasd labore dolore lorem ipsum.
+                        At lorem lorem magna ut et, nonumy et labore et tempor
+                        diam tempor erat.
+                      </p>
+                      <h5 class="fw-bold text-success mb-0">Client Name</h5>
+                      <small class="text-muted">Profession</small>
                     </div>
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button"
-                  data-bs-target="#carouselExampleInterval"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon"
-                    aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+
+                <!-- Slide 2 -->
+                <div class="carousel-item">
+                  <div
+                    class="d-flex flex-column align-items-center text-center">
+                    <img src="https://randomuser.me/api/portraits/women/44.jpg"
+                      class="rounded mb-3"
+                      style="width:80px; height:80px; object-fit:cover;"
+                      alt="Client">
+                    <div>
+                      <p class="text-secondary">
+                        Magna est erat clita dolores et rebum. Stet labore lorem
+                        ipsum tempor.
+                        Tempor erat elitr at dolor amet sit justo.
+                      </p>
+                      <h5 class="fw-bold text-success mb-0">Another Client</h5>
+                      <small class="text-muted">Profession</small>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <!-- Carousel Controls -->
+              <div class="mt-3 d-flex justify-content-center">
+                <button class="btn btn-light text-success me-2" type="button"
+                  data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
                 </button>
-                <button class="carousel-control-next" type="button"
-                  data-bs-target="#carouselExampleInterval"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon"
-                    aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="btn btn-light" type="button"
+                  data-bs-target="#testimonialCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon"></span>
                 </button>
               </div>
 
             </div>
           </div>
         </div>
+      </div>
 
-      </section>
     </main>
 
     <!-- Footer Start -->
