--- a/ourteam.html
+++ b/ourteam.html
@@ -20,6 +20,24 @@
       .link-success-hover:hover {
         color: #198754 !important; /* Bootstrap green */
       }
+      /* Logo Styling */
+      .logo {
+        max-width: 300px;
+        height: auto;
+      }
+
+/* Adjust logo size on smaller screens */
+       @media (max-width: 768px) {
+        .logo {
+            max-width: 200px;
+          }
+        }
+
+       @media (max-width: 576px) {
+        .logo {
+           max-width: 150px;
+          }
+       }
 
       .page-header {
         position: relative;
@@ -193,13 +211,14 @@
         </div>
 
         <!-- Right side: social icons -->
-        <div>
+       <div>
           <span class="me-2">Follow Us:</span>
-          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-        </div>
+          <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+          <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+          <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+      </div>
+
       </div>
     </div>
     <!-- Header Start -->
@@ -208,7 +227,7 @@
         <div class="container-fluid">
           <!-- Logo -->
            <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
-            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt="LOGO"></a>
+            href="index.html"><img src="images/logo-png.png" class="logo img-fluid" alt="LOGO"></a>
 
           <!-- Toggler for mobile -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -267,12 +286,8 @@
             <h1 class="display-3 text-white mb-4 fw-bold">Our Team</h1>
             <nav aria-label="breadcrumb" class="animated slideInDown">
               <ul class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item"><a href="#"
-                    class="text-white text-decoration-none">Home</a></li>
-                <li class="breadcrumb-item"><a href="#"
-                    class="text-white text-decoration-none">Pages</a></li>
-                <li class="breadcrumb-item text-white active"
-                  aria-current="page">Services</li>
+                <li class="breadcrumb-item"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                <li class="breadcrumb-item text-white active" aria-current="page">Our Team</li>
               </ul>
             </nav>
           </div>
@@ -298,9 +313,9 @@
                     <h4 class="mb-0">Doris Jordan</h4>
                     <p class="text-primary">Landscape Designer</p>
                     <div class="team-social d-flex justify-content-center">
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://instagram.com"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -315,9 +330,9 @@
                     <h4 class="mb-0">Johnny Ramirez</h4>
                     <p class="text-primary">Garden Designer</p>
                     <div class="team-social d-flex justify-content-center">
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://instagram.com"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -333,9 +348,9 @@
                     <h4 class="mb-0">Diana Wagner</h4>
                     <p class="text-primary">Senior Gardener</p>
                     <div class="team-social d-flex justify-content-center">
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square rounded-circle me-2" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square rounded-circle me-2" href="https://instagram.com"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -359,18 +374,10 @@
                 <p><i
                     class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
                 <div class="d-flex gap-2">
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-twitter"></i></a>
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-facebook"></i></a>
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-youtube"></i></a>
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-twitter"></i></a>
+                  <a href="https://facebook.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-facebook"></i></a>
+                  <a href="https://youtube.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-youtube"></i></a>
+                  <a href="https://instagram.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
 
