--- a/about.html
+++ b/about.html
@@ -38,6 +38,11 @@
            max-width: 150px;
           }
        }
+        /* Top Bar */
+      .top-bar {
+        background-color: #0b3d2e;
+      }
+
       .page-header {
       position: relative;
       background: url('images/baner1.jpg') center center/cover no-repeat;
@@ -67,7 +72,6 @@
       /* abt section */
       /* Font & Base */
       body {
-      font-family: 'Poppins', sans-serif;
       background-color: #f9fefb;
       color: #3b4c3f;
      }
@@ -143,7 +147,6 @@
   background-attachment: fixed;
   position: relative;
   color: #fff;
-  font-family: 'Cormorant Garamond', serif;
 }
 
 /* Soft Overlay */
@@ -218,7 +221,7 @@
 /* Team member image */
 .team-img img {
   width: 100%;
-  height: 100%;
+  height: 80%;
   object-fit: cover;
   transition: transform 0.5s ease;
   border-radius: 0;
@@ -307,25 +310,23 @@
     </style>
   </head>
   <body>
-    <!-- Top Bar -->
-    <div style="background-color:#0b3d2e;" class="text-white py-3">
+    
+   <!-- Top Bar -->
+    <div class="top-bar text-white py-3">
       <div class="container d-flex justify-content-between align-items-center">
-        <!-- Left side: phone & email -->
         <div>
           <i class="bi bi-telephone me-2"></i> +91 87345 67890
           <span class="ms-4"><i class="bi bi-envelope me-2"></i>
             info@themindgarden.com</span>
         </div>
-
-    <!-- Right side: social icons -->
-     <div>
-        <span class="me-2">Follow Us:</span>
-        <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-        <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-        <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-        <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
-    </div>
-
+        <!-- Right side: social icons -->
+        <div>
+          <span class="me-2">Follow Us:</span>
+          <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+          <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+          <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+        </div>
       </div>
     </div>
     <!-- Header Start -->
@@ -470,7 +471,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-1.jpg" alt="Doris Jordan">
+                    <img src="images/broski.jpg" alt="Doris Jordan">
                 </div>
                 <div class="team-text">
                     <h4 class="mb-0">Doris Jordan</h4>
@@ -487,7 +488,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-2.jpg" alt="Johnny Ramirez">
+                    <img src="images/dinesh.jpg" alt="Johnny Ramirez">
                 </div>
                 <div class="team-text">
                     <h4 class="mb-0">Johnny Ramirez</h4>
@@ -504,7 +505,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-3.jpg" alt="Diana Wagner">
+                    <img src="images/shreya.jpg" alt="Diana Wagner">
                 </div>
                 <div class="team-text">
                     <h4 class="mb-0">Diana Wagner</h4>
