--- a/about.html
+++ b/about.html
@@ -302,10 +302,32 @@
   opacity: 0.60; /* lighter green overlay */ 
   z-index: 1;
 }
-
 .counter-section .container {
   position: relative;
   z-index: 2;
+}
+ /*animation starts*/
+ 
+.page-header h1,
+.page-header nav {
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: fadeSlideDown 1s ease-in-out forwards;
+}
+
+.page-header nav {
+  animation-delay: 0.5s; /* Starts after heading animation */
+}
+
+@keyframes fadeSlideDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
     </style>
   </head>
@@ -353,6 +375,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-5 link-success" href="about.html">About</a>
+                <nav aria-label="breadcrumb" class="animated slideInDown">
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-5 link-dark link-success-hover" href="services.html">Services</a>
@@ -471,7 +494,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/broski.jpg" alt="Doris Jordan">
+                    <img src="images/team-1.jpg" alt="Doris Jordan">
                 </div>
                 <div class="team-text">
                     <h4 class="mb-0">Doris Jordan</h4>
@@ -488,7 +511,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/dinesh.jpg" alt="Johnny Ramirez">
+                    <img src="images/team-2.jpg" alt="Johnny Ramirez">
                 </div>
                 <div class="team-text">
                     <h4 class="mb-0">Johnny Ramirez</h4>
@@ -505,7 +528,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/shreya.jpg" alt="Diana Wagner">
+                    <img src="images/team-3.jpg" alt="Diana Wagner">
                 </div>
                 <div class="team-text">
                     <h4 class="mb-0">Diana Wagner</h4>
